--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "inquirer": "^8.2.4"
+    "cfonts": "^3.2.0",
+    "inquirer": "^8.2.4",
+    "mysql2": "^3.6.2"
   }
 }
